--- a/Tarea_2/app/src/main/res/layout/activity_main.xml
+++ b/Tarea_2/app/src/main/res/layout/activity_main.xml
@@ -1,220 +1,216 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Nombre"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtName"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtName"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:text="Apellido"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/txtLastName"
-        app:layout_constraintEnd_toStartOf="@+id/txtLastName"
-        app:layout_constraintHorizontal_bias="0.714"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtLastName"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/txtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.856"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.046" />
-
-    <EditText
-        android:id="@+id/txtLastName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/txtName"
-        app:layout_constraintStart_toStartOf="@+id/txtName"
-        app:layout_constraintTop_toBottomOf="@+id/txtName" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Lenguajes de programacion que maneja"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.096"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-    <CheckBox
-        android:id="@+id/cbxJava"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:text="Java"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <CheckBox
-        android:id="@+id/cbxPhp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="PHP"
-        app:layout_constraintBottom_toBottomOf="@+id/cbxJava"
-        app:layout_constraintStart_toEndOf="@+id/cbxJava"
-        app:layout_constraintTop_toTopOf="@+id/cbxJava" />
-
-    <CheckBox
-        android:id="@+id/cbxPython"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Python"
-        app:layout_constraintBottom_toBottomOf="@+id/cbxPhp"
-        app:layout_constraintStart_toEndOf="@+id/cbxPhp"
-        app:layout_constraintTop_toTopOf="@+id/cbxPhp" />
-
-    <CheckBox
-        android:id="@+id/cbxCcharp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="C#"
-        app:layout_constraintBottom_toBottomOf="@+id/cbxCPlusPlus"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.029"
-        app:layout_constraintStart_toEndOf="@+id/cbxCPlusPlus"
-        app:layout_constraintTop_toTopOf="@+id/cbxCPlusPlus"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <CheckBox
-        android:id="@+id/cbxCPlusPlus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="C++"
-        app:layout_constraintBottom_toBottomOf="@+id/cbxPython"
-        app:layout_constraintStart_toEndOf="@+id/cbxPython"
-        app:layout_constraintTop_toTopOf="@+id/cbxPython" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Lenguaje Preferido"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.053"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cbxJava" />
-
-
-    <RadioGroup
-        android:id="@+id/radioGroup"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4">
+        android:layout_height="200dp"
+        android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/rdJava"
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="73dp"
+            android:layout_height="19dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="89dp"
+            android:layout_marginTop="47dp"
+            android:layout_marginEnd="259dp"
+            android:layout_marginBottom="134dp"
+            android:text="Nombre"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/txtName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:text="Java"
-            app:layout_constraintEnd_toEndOf="@+id/cbxJava"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="167dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginEnd="44dp"
+            android:layout_marginBottom="121dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
 
-        <RadioButton
-            android:id="@+id/rdPhp"
+        <TextView
+            android:id="@+id/lblLastName"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="88dp"
+            android:layout_marginTop="128dp"
+            android:layout_marginEnd="259dp"
+            android:layout_marginBottom="42dp"
+            android:text="Apellido"
+            android:textSize="16sp" />
+
+        <EditText
+            android:id="@+id/txtLastName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="PHP"
-            app:layout_constraintEnd_toEndOf="@+id/cbxPhp"
-            app:layout_constraintStart_toEndOf="@+id/rdJava"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="168dp"
+            android:layout_marginTop="114dp"
+            android:layout_marginEnd="43dp"
+            android:layout_marginBottom="40dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="Name" />
+    </RelativeLayout>
 
-        <RadioButton
-            android:id="@+id/rdPython"
-            android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="401dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:text="Python"
-            app:layout_constraintEnd_toEndOf="@+id/cbxPython"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/rdPhp"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="Lenguajes de programación que maneja:"
+            android:textSize="20sp" />
 
-        <RadioButton
-            android:id="@+id/rdCCharp"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/layoutLenguajes"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="24dp"
-            android:text="C#"
-            app:layout_constraintEnd_toEndOf="@+id/cbxCPlusPlus"
-            app:layout_constraintStart_toEndOf="@+id/rdPython"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            android:layout_below="@+id/textView18"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="29dp"
+            android:layout_marginEnd="0dp"
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/rdCPlusPlus"
+            <CheckBox
+                android:id="@+id/cbxJava"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Java" />
+
+            <CheckBox
+                android:id="@+id/cbxPhp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="PHP" />
+
+            <CheckBox
+                android:id="@+id/cbxPython"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Python" />
+
+            <CheckBox
+                android:id="@+id/cbxCSharp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="C#" />
+
+            <CheckBox
+                android:id="@+id/checkBox7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="CheckBox" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView21"
             android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_below="@id/layoutLenguajes"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="30dp"
+            android:text="Lenguaje preferido:"
+            android:textSize="20sp" />
+
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="24dp"
-            android:text="C++"
-            app:layout_constraintEnd_toEndOf="@+id/cbxCcharp"
-            app:layout_constraintStart_toEndOf="@+id/rdCCharp"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            android:layout_below="@+id/textView21"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="0dp"
+            android:orientation="horizontal">
 
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/rBtnJava"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Java" />
 
-    <Button
-        android:id="@+id/btnAccept"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#951616"
-        android:backgroundTint="#C82F2F"
-        android:text="Aceptar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.485"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
-        app:layout_constraintVertical_bias="0.238" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <RadioButton
+                android:id="@+id/rBtnPhp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="PHP" />
+
+            <RadioButton
+                android:id="@+id/rBtnPython"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Python" />
+
+            <RadioButton
+                android:id="@+id/rBtnCSharp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="C#" />
+
+            <RadioButton
+                android:id="@+id/rBtnCPlusPlus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="C++" />
+
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/btnAccept"
+            android:layout_width="142dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/radioGroup"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="139dp"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="139dp"
+            android:layout_weight="1"
+            android:text="Aceptar" />
+
+    </RelativeLayout>
+
+</LinearLayout>
