--- a/Tarea_2/app/src/main/res/layout/activity_main.xml
+++ b/Tarea_2/app/src/main/res/layout/activity_main.xml
@@ -131,15 +131,15 @@
                 android:text="C#" />
 
             <CheckBox
-                android:id="@+id/checkBox7"
+                android:id="@+id/cbxCPlusPlus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="CheckBox" />
+                android:text="C++" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView21"
+            android:id="@+id/lblfav"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_below="@id/layoutLenguajes"
@@ -155,7 +155,7 @@
             android:id="@+id/radioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/textView21"
+            android:layout_below="@+id/lblfav"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="0dp"
@@ -209,6 +209,7 @@
             android:layout_marginTop="80dp"
             android:layout_marginEnd="139dp"
             android:layout_weight="1"
+            android:onClick="btnAccept"
             android:text="Aceptar" />
 
     </RelativeLayout>
